--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,19 @@ on: [push]
 #   CLOUD_CONNECTION_STRING: ${{secrets.CLOUD_CONNECTION_STRING}}
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
   integration:
     working_directory: ~/class-chat
 
     steps:
       # Code Checkout
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
+
+      with:
+        node-version: '18.11.0'
 
       - name: Install dependencies
         run: |
