--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,11 @@ jobs:
     working_directory: ~/class-chat
 
     steps:
-      # Code Checkout
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
-
-      with:
-        node-version: '18.11.0'
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.5.2
+        with:
+          node-version: "18.11.0"
 
       - name: Install dependencies
         run: |
