--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,14 @@ jobs:
         with:
           node-version: "18.11.0"
 
-      # - name: Install dependencies
-      #   run: |
-      #     npm install
+      - name: Install dependencies
+        run: |
+          npm install
 
-      # - name: Lint code with ESLint
-      #   run: |
-      #     npm run lint
-      #   continue-on-error: true
+      - name: Lint code with ESLint
+        run: |
+          npm run lint
+        continue-on-error: true
 
       # - name: Autoformat code with Prettier
       #   run: |
