--- a/class-chat/package.json
+++ b/class-chat/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.20.0",
     "autoprefixer": "10.4.14",
+    "boring-avatars": "^1.7.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
