--- a/class-chat/package.json
+++ b/class-chat/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.6.0",
+    "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.20.0",
     "autoprefixer": "10.4.14",
     "boring-avatars": "^1.7.0",
@@ -18,6 +20,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reactjs-popup": "^2.0.5",
     "tailwindcss": "3.3.1"
   }
 }
