--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,10 @@ jobs:
           npm run lint
         continue-on-error: true
 
-      # - name: Autoformat code with Prettier
-      #   run: |
-      #     autopep8 --aggressive --list-fixes main.py
+      - name: Autoformat code with Prettier
+        run: |
+          cd class-chat
+          npm run format:fix
 
       # - name: Test with PyTest
       #   run: pytest test_queries.py --doctest-modules --junitxml=junit/test-results-${{ github.ref_name }}.xml
