--- a/class-chat/package.json
+++ b/class-chat/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "devPort" : ".server.development.sh",
+    "startPort" : ".server.production.sh"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.6.0",
@@ -22,5 +26,9 @@
     "react-dom": "18.2.0",
     "reactjs-popup": "^2.0.5",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "2.8.7"
   }
 }
