--- a/class-chat/package.json
+++ b/class-chat/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "devPort" : ".server.development.sh",
-    "startPort" : ".server.production.sh"
+    "devPort": ".server.development.sh",
+    "startPort": ".server.production.sh",
+    "test": "jest "
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.6.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
     "prettier": "2.8.7"
   }
 }
