--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: ArtiomTr/jest-coverage-report-action@v2
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.5.2
@@ -36,7 +37,7 @@ jobs:
       - name: Test with Jest
         run: |
         cd class-chat
-        npm run jest --doctest-modules --junitxml=junit/test-results-${{ github.ref_name }}.xml
+        npm run test --doctest-modules --junitxml=junit/test-results-$.xml
       continue-on-error: true
 
       # - name: Upload pytest test results
