--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: chatapp
 run-name: "Run #${{ github.run_number }} for ${{ github.ref_name }} by @${{ github.actor }}"
 on: [push]
 
-# env:
-#   PY_VERSION: "3.10.10"
-#   CLOUD_CONNECTION_STRING: ${{secrets.CLOUD_CONNECTION_STRING}}
+env:
+  NEXT_PUBLIC_SUPABASE_URL: ${{secrets.NEXT_PUBLIC_SUPABASE_URL}}
+  NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY}}
 
 jobs:
   integration:
@@ -46,49 +46,49 @@ jobs:
       #     github-token: ${{ secrets.GITHUB_TOKEN }}
       # - name: Upload pytest test results
 
-  # delivery:
-  #   runs-on: ubuntu-22.04
-  #   needs: integration
-  #   if: github.ref_name == 'master' || startsWith(github.ref, 'refs/tags')
+  delivery:
+    runs-on: ubuntu-latest
+    needs: integration
+    if: github.ref_name == 'master' || startsWith(github.ref, 'refs/tags')
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Docker meta
-  #       id: meta
-  #       uses: docker/metadata-action@v4
-  #       with:
-  #         # list of Docker images to use as base name for tags
-  #         images: |
-  #           ${{ vars.DOCKER_HUB_USER }}/mongo_api
-  #         # generate Docker tags based on the following events/attributes
-  #         tags: |
-  #           type=schedule
-  #           type=ref,event=branch
-  #           type=ref,event=pr
-  #           type=semver,pattern={{version}}
-  #           type=semver,pattern={{major}}.{{minor}}
-  #           type=semver,pattern={{major}}
-  #           type=sha
+      # - name: Docker meta
+      #   id: meta
+      #   uses: docker/metadata-action@v4
+      #   with:
+      #     # list of Docker images to use as base name for tags
+      #     images: |
+      #       ${{ vars.DOCKER_HUB_USER }}/mongo_api
+      #     # generate Docker tags based on the following events/attributes
+      #     tags: |
+      #       type=schedule
+      #       type=ref,event=branch
+      #       type=ref,event=pr
+      #       type=semver,pattern={{version}}
+      #       type=semver,pattern={{major}}.{{minor}}
+      #       type=semver,pattern={{major}}
+      #       type=sha
 
-  #     - name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v2
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
 
-  #     - name: Login to Docker Hub
-  #       if: github.event_name != 'pull_request'
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ vars.DOCKER_HUB_USER }}
-  #         password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ vars.DOCKER_HUB_USER }}
+      #     password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-  #     - name: Build and push
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: .
-  #         push: ${{ github.event_name != 'pull_request' }}
-  #         tags: ${{ steps.meta.outputs.tags }}
-  #         labels: ${{ steps.meta.outputs.labels }}
+      # - name: Build and push
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     push: ${{ github.event_name != 'pull_request' }}
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
