--- a/class-chat/package.json
+++ b/class-chat/package.json
@@ -29,6 +29,7 @@
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.5.0",
     "prettier": "2.8.7"
