--- a/class-chat/Dockerfile
+++ b/class-chat/Dockerfile
@@ -14,6 +14,7 @@ RUN npm run build
 
 # Asegurar que la build sea de produccion
 ENV NODE_ENV production
+ENV NEXT_PUBLIC_SUPABASE_URL https://ofouyycoclzmipiqgfpv.supabase.co
 
 # Puerto por defecto que usa React
 EXPOSE 3000
