--- a/class-chat/Dockerfile
+++ b/class-chat/Dockerfile
@@ -5,7 +5,7 @@ FROM node:18
 
 # COPY package*.json ./
 
-# RUN npm install
+# RUN npm install -D
 
 # COPY . .
 
@@ -30,4 +30,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["npm","start"]
+CMD ["npm","dev"]
